--- a/app/index.html
+++ b/app/index.html
@@ -70,12 +70,14 @@
 <div class="wrapper">
 
           <header id="header" ng-controller="mainctrl as ctrl">
-            <h1>Sunwoo Lee</h1>
-<!--             <nav class="links">
+            <h1>Sunwoo Project</h1>
+            <nav class="links">
               <ul>
-                <li><a ui-sref="gallary">Project</a></li>
+                <li><a ui-sref="main">Home</a></li>
+                <li><a ui-sref="about">About</a></li>
+                <li><a ui-sref="contact">Contact</a></li>
               </ul>
-            </nav> -->
+            </nav>
             <nav class="main">
               <ul>
                 <li class="search">
@@ -106,7 +108,12 @@
                 <ul class="links">
                   <li>
                     <a ui-sref="main">
-                      <h3>Project</h3>
+                      <h3>Home</h3>
+                    </a>
+                  </li>
+                  <li>
+                    <a ui-sref="about">
+                      <h3>About</h3>
                     </a>
                   </li>
                 </ul>
