--- a/app/index.html
+++ b/app/index.html
@@ -32,9 +32,9 @@
     <div class="header">
       <div class="for-sticky">
         <!--LOGO-->
-        <div class="col-md-2 col-xs-6 logo">
+<!--         <div class="col-md-2 col-xs-6 logo">
           <a href="index.html">SW</a>
-        </div>
+        </div> -->
         <!--/.LOGO END-->
       </div>
       <div class="menu-wrap">
